--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -248,4 +248,5 @@
     <string name="profile_mastery">MASTERY \n %1$d</string>
     <string name="profile_achieved">ACHIEVED \n %1$d</string>
     <string name="profile_challenge">CHALLENGE \n %1$d</string>
+    <string name="archieved_count">Archieved <b><font color='red'>3</font></b> times</string>
 </resources>
